--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Capstone Project/corpus_inR.RData
 
 *.png
 
+*.txt
+
 Reproducible Reaserch/PeerAssessment2/Storm_Analysis.html
 
 Reproducible Reaserch/PeerAssessment2/Storm_Analysis.html
